--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/style.css" />
   </head>
   <body>
+    <header class="timer">Time left</header>
     <div class="wrapper">
       <header>
         <h1>Quiz</h1>
